[project]
name = "block-2"
version = "0.1.0"
description = "Программа для работы по домашке в курсе ООП"
authors = [
    {name = "IgnatyevaA",email = "shyra9072@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "item (>=0.0.3,<0.0.4)",
    "pytest-cov (>=6.1.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
